<?xml version="1.0"?>
<package format="2">
  <name>ez_pnp</name>
  <version>0.0.2</version>
  <description>The ez_pnp package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>manipulation_msgs</depend>
  <depend>household_objects_database_msgs</depend>

  <export>
  </export>
</package>
